# file-type-magic

./: .gitignore  .npmignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
demo/: benchmark.mjs  index.html  node-demo.js
lib/: index.ts  node.ts  shared.ts
src/: lib.rs
