[package]
name = "file-type-magic"
version = "0.1.0"
edition = "2021"
description = "Signature-based file type checker compiled to WebAssembly"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
